--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "main": "index.js",
   "dependencies": {
     "discord.js": "^12.5.3",
-    "eslint": "^7.23.0"
+    "eslint": "^7.23.0",
+    "moment": "^2.29.1",
+    "node-fetch": "^2.6.1"
   }
 }
