--- a/config.example.json
+++ b/config.example.json
@@ -1,7 +1,9 @@
 {
+  "env": "local",
   "prefix": "!",
   "token": "",
   "owner_id": "",
   "base_auth_url": "http://base.test",
-  "base_auth_token": ""
+  "base_auth_token": "",
+  "sentry_dsn": ""
 }
