--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "main": "index.js",
   "dependencies": {
+    "@sentry/node": "^6.5.1",
+    "@sentry/tracing": "^6.5.1",
     "discord.js": "^12.5.3",
     "eslint": "^7.23.0",
     "moment": "^2.29.1",
