Install and configure Discord buttons

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "dependencies": {
     "@sentry/node": "^6.5.1",
     "@sentry/tracing": "^6.5.1",
+    "discord-buttons": "^4.0.0",
     "discord.js": "^12.5.3",
     "eslint": "^7.23.0",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1"
-  }
+  },
+  "type": "commonjs"
 }
