--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "discord.js": "^12.5.3",
     "eslint": "^7.23.0",
     "moment": "^2.29.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "randomstring": "^1.2.1"
   },
   "type": "commonjs"
 }
