--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@sentry/node": "^6.5.1",
     "@sentry/tracing": "^6.5.1",
     "discord-buttons": "^4.0.0",
+    "discord-together": "^1.1.62",
     "discord.js": "^12.5.3",
     "eslint": "^7.23.0",
     "moment": "^2.29.1",
