--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
+  "name": "phoenix-bot",
+  "version": "1.0.0",
+  "description": "The official PhoenixBot code",
   "main": "index.js",
-  "dependencies": {
-    "@sentry/node": "^6.5.1",
-    "@sentry/tracing": "^6.5.1",
-    "discord-buttons": "^4.0.0",
-    "discord-together": "^1.1.62",
-    "discord.js": "^12.5.3",
-    "eslint": "^7.23.0",
-    "moment": "^2.29.1",
-    "node-fetch": "^2.6.1",
-    "randomstring": "^1.2.1"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "commonjs"
+  "author": "Diego",
+  "license": "ISC",
+  "dependencies": {
+    "@discordjs/builders": "^0.5.0",
+    "@discordjs/rest": "*",
+    "@sentry/node": "^6.12.0",
+    "@sentry/tracing": "^6.12.0",
+    "discord-api-types": "^0.22.0",
+    "discord-together": "^1.2.0",
+    "discord.js": "^13.1.0",
+    "dotenv": "^10.0.0",
+    "moment": "^2.29.1",
+    "node-fetch": "^2.6.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0"
+  }
 }
