--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "moment": "^2.29.1",
-    "node-fetch": "^2.6.2"
+    "node-fetch": "^2.6.2",
+    "string-progressbar": "^1.0.4"
   },
   "devDependencies": {
     "eslint": "^7.32.0"
